fixed some layout issues

--- a/Mathecss.css
+++ b/Mathecss.css
@@ -35,11 +35,11 @@ input {
 	margin-left: 20px;
 }
 #meldung{
-	position: absolute;
+	position: relative;
 	bottom: 55%;
 }
 button {
-	position: absolute;
+	position: relative;
 	bottom: 25%;
 	width:20%;
 	border: none;
